syntax = "proto3";
package greet;

option java_package = "com.sample.greet";
option java_multiple_files = true;

service GreetService {
  rpc Greet (GreetRequest) returns (GreetResponse) {
  };
}

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string resultId = 2;
}